knca/configmap_in_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    run: ubuntu
    name: ubuntu
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command:
        - bash
        - -c
        - env; sleep infinity
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
