knca/pod_init.yml
apiVersion: v1
kind: Pod
metadata:
  name: countdown-pod
  namespace: testing
spec:
  restartPolicy: Never
  containers:
  - name: main-container
    image: busybox
    command: ['sh', '-c', 'count=0; while true; do count=$((count+1)); echo "main-container: sleeping for 30 seconds - iteration $count"; sleep 30; done']
