knca/pv-pvc-pod.yml
# Pod using the PVCs
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: testing
  labels:
    app: ubuntu
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest
      command: 
        - sleep
        - "3600"
      volumeMounts:
        - mountPath: /mnt/manual
          name: manual-volume
        - mountPath: /mnt/dynamic
          name: dynamic-volume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: manual-volume
      persistentVolumeClaim:
        claimName: manual-claim
    - name: dynamic-volume
      persistentVolumeClaim:
        claimName: dynamic-claim
